# kcorre.github.io

./: .gitignore  Cargo.toml  README.md  _config.yml  build.rs  home.md  index.html  index.md  makefile.toml  template.html
.well-known/: readme.md
.well-known/idp-proxy/: WebID-proxy  WebID-proxy.js
.well-known/webid/: foaf.json  foaf.rdf  index.html  webIDRTC.js
_data/: authors.yml  navigation.yml
_includes/: _author-bio.html
_sass/: variables.scss
contact/: index.md
docs/: kcorre-5c6a892a30129389c7274786a4e8c0875b01efd5d9596416d7eaba249f3b8b4ec3df8cd73fa532b45d5df6e764654871.js  publication-a74c8609fb6601d5.css
fonts/: .DS_Store0  template0.html
fonts/fonts0/: generator.js
old/fonts/: index.html
old/fonts/styles/: theme.css
old/fonts/styles0/: main.css
old/scripts/: main.js
old/webrtcsurvey/models/: oidcViz.json
publications/: index.md
src/: main.rs  routes.rs
src/routes/: contact.rs  home.rs  publications.rs
static/markdown/: presentation.md
static/toml/: contacts.toml  publications.toml
styles/: main.css
tmrJS/: home.md  index.html  template.html
tmrJS/styles/: theme.css
webrtcsurvey/: index.html  scripts.6940c6ca.js  scripts.cd14120b.js  vendor.d23f7616.js
webrtcsurvey/models/: nullViz.json  tlsViz.json  webRTCfpViz.json  webrtcViz.json
webrtcsurvey/scripts/: scripts.5ce2269f.js  scripts.8d79c976.js  scripts.b55fb065.js  scripts.c98c7022.js
webrtcsurvey/styles/: main.5628fcac.css  main.a3760ccb.css
webrtcsurvey/views/: about.html  main.html
