[package]
name = "kcorre"
version = "0.1.0"
authors = ["Kevin Corre <kevin.corre@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
static-toml = "1.2.0"
wasm-logger = "0.2.0"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[build-dependencies]
markdown = "1.0.0-alpha.16"